Closed Bug 400025 Opened 17 years ago Closed 17 years ago

SVG stroke on text is rendered on... something else

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9beta1

People

(Reporter: wesj, Assigned: longsonr)

References

Details

(Keywords: regression, testcase)

Attachments

(3 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre) Gecko/2007101605 Minefield/3.0a9pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre) Gecko/2007101605 Minefield/3.0a9pre

The stroke one svg text is being rendered on some separate box. This started on builds after 10/10

Reproducible: Always

Steps to Reproduce:
1.
2.
3.
A testcase for rendering stroke on text
The image shows the rendering as seen with todays build, and with a build from 10/9/07.
Component: General → SVG
Product: Firefox → Core
Version: unspecified → Trunk
Flags: blocking1.9?
Keywords: regression, testcase
Regression from bug 384681. Backing that out fixes it.

It seems like strokes are rendered much too large
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: general → general
_cairo_win32_transform_FIXED_to_fixed is assuming that the GDI "FIXED" type is of the same format as _cairo_fixed_t.  This worked when cairo was using 16.16, but gives the incorrect result now that we're using 24.8.
Attached patch patchSplinter Review
Attachment #285566 - Flags: review?(vladimir)
Blocks: 384681
Attachment #285566 - Flags: superreview?(vladimir)
Comment on attachment 285566 [details] [diff] [review]
patch

Blah, I attached basically this same patch last friday but apparently dropped off the net before it took in bugzilla.  This looks fine
Attachment #285566 - Flags: superreview?(vladimir)
Attachment #285566 - Flags: superreview+
Attachment #285566 - Flags: review?(vladimir)
Attachment #285566 - Flags: review+
Attachment #285566 - Flags: approval1.9+
Comment on attachment 285566 [details] [diff] [review]
patch

whoops, forgot we're in approvals-only mode
Attachment #285566 - Flags: approval1.9+ → approval1.9?
Attachment #285566 - Flags: approvalM9?
Target Milestone: --- → mozilla1.9 M9
Flags: blocking1.9? → blocking1.9+
Assignee: nobody → longsonr
Comment on attachment 285566 [details] [diff] [review]
patch

Massive confusion regarding approvals.  Land away!
Attachment #285566 - Flags: approvalM9?
Attachment #285566 - Flags: approvalM9+
Attachment #285566 - Flags: approval1.9?
Attachment #285566 - Flags: approval1.9+
checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
verified fixed using Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9a9pre) Gecko/2007102605 Minefield/3.0a9pre

-> Verified fixed
Status: RESOLVED → VERIFIED
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: