Bug 400025 - stroke on text is too big on Windows after landing of bug 384681. r+sr+a+aM9=vladimir